--- a/recruitment.html
+++ b/recruitment.html
@@ -92,20 +92,12 @@
 			<div class="row">
 				<div class="col-md-6 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
 					<div class="img-shadow">
-						<img src="images/image/20160916_104358.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+						<img src="images/image/20170524_104829.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-					<h2 class="heading-colored">About Us</h2>
-					    <p> A consistent trajectory of advancements requires a passion for excellence fueled by the partnership of Filipino skills and Japanese technology. It is fortified by the financial and technical support that KYOWA EXEO has generously extended MG EXEO, an international partnership that has survived the years. </p>
-                        <p>Armed with a history of quality service both domestic and international, MG EXEO strives to provide specialized, efficient cost-effective services in network telecommunication and general construction of outside and inside plant facilities. Our 20 year history includes the full and semi-turnkey projects in the Philippines for companies such as PLDT/Smart Communications, Globe/Innove Communications, Ericsson, Huawei and ZTE.</p>
-                        <p>Internationally, we have been the key player in the switching and power installation for the telecom industry in the rapidly developing countries in the Asia Pacific and Sub-Saharan African Regions. Also present in Denmark and England for Equipment Installation for MITSUBISHI SLTE, and in the USA, New Zealand, and Australia for Alcatel-Lucent. By teaming up dedicated professionals with cutting edge technology, we at MG EXEO continue to raise expectations in the world of Telecommunications and Wireless Network Construction. </p>
-                        <p>MG EXEO is the turnkey solution for all your cable and wireless network telecommunications needs and general construction of outside and inside plant facilities.
-
-							We aim for specialized, efficient, cost-effective service in a comprehensive manner. A single entity capable of combining Cable Telephone Network Services, Infrastructure Services, Switching, Power and Transmission Services, and CAD Engineering Services ensures the provision of only topnotch quality.
-
-							We specialize in the total operations and management of Telecommunications construction requirements from planning, design, procurement, implementation and maintenance — we’ve got you covered for everything you need.</p>
-
+					<h2 class="heading-colored">We are currently looking for DRIVEN individuals to join our ranks:</h2>
+					    <p>Open positions are soon to be updated, in the meantime you can learn more about our company <a href="about.html">here.</a></p>
 				</div>
 			</div>
 		</div>
