--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="gtco-copy">
 							<h3>PLDT FTK phase 7B</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-							<p><a href="about.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+							<p><a href="news.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 						</div>
 					</div>
 
@@ -152,7 +152,7 @@
 						<div class="gtco-copy">
 							<h3>PLDT FTK phase 6B</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-							<p><a href="about.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+							<p><a href="news.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 						</div>
 					</div>
 
@@ -163,7 +163,7 @@
 						<div class="gtco-copy">
 							<h3>NCLSP</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-							<p><a href="about.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+							<p><a href="news.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 						</div>
 					</div>
 
@@ -177,7 +177,7 @@
 						<div class="gtco-copy">
 							<h3>Smart Projects</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-							<p><a href="about.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+							<p><a href="news.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 						</div>
 					</div>
 
@@ -188,7 +188,7 @@
 						<div class="gtco-copy">
 							<h3>Globe Projects</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-							<p><a href="about.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+							<p><a href="news.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 						</div>
 					</div>
 
@@ -199,7 +199,7 @@
 						<div class="gtco-copy">
 							<h3>Fiberization</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-							<p><a href="about.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+							<p><a href="news.html" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 						</div>
 					</div>
 
