UI update march 11

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn"><strong>MG Exeo</strong></h1>
-							<h2 class="animate-box" data-animate-effect="fadeIn">Network Incorporated</h2>
+							<h1 class="animate-box" data-animate-effect="fadeIn" style="font-family:Impact, Charcoal, sans-serif;"><strong>MG Exeo Network Inc.</strong></h1>
 							<!-- <p class="gtco-video-link animate-box" data-animate-effect="fadeIn"><a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-controller-play"></i></a></p> -->
 						</div>
 					</div>
@@ -280,6 +279,7 @@
 					<div class="gtco-contact-info">
 						<ul>
 							<li class="address">Elizabeth Ave. Sta. Ana drive Brgy. Sun Valley Parañaque city</li>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30900.31362393498!2d121.00884716843058!3d14.51112205099705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397cee304184809%3A0xea6fbddb196be965!2sMg+Exeo+Network+Incorporated!5e0!3m2!1sen!2sph!4v1520776066234" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe><br>
 							<li class="phone"><a href="tel://1235235598">(02) 889-8633</a></li>
 							<li class="email"><a href="mailto:info@yoursite.com">it@mgexeo.com.ph</a></li>
 							<li class="url"><a href="#">http://mgexeo.com.ph</a></li>
